<?xml version="1.0" encoding="utf-8"?>
<!-- AUTHOR: X00084900 CHRISTOPHER NEWELL -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    
     <TextView
        android:id="@+id/CriteriaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Select_Criteria"
        android:textAppearance="?android:attr/textAppearanceMedium">
        </TextView>
    
    <EditText
        android:id="@+id/searchCriteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CriteriaText"
        android:layout_marginTop="50dp"
        android:hint="Enter Search Criteria">
    </EditText>
    
    <TextView
        android:id="@+id/selectionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchCriteria"
        android:layout_marginTop="50dp"
        android:text="@string/Make_Selection"
        android:textAppearance="?android:attr/textAppearanceMedium">"
        </TextView>
        
    <Spinner 
        android:id="@+id/searchSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectionText"
        android:entries="@array/Search_Criteria"
        android:prompt="@string/Search_Prompt"/>
   
     
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        style="@android:style/ButtonBar"
        >
        <Button
            android:id="@+id/searchButton_confirm"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Confirm_Search">
        </Button>"
     </RelativeLayout>
    
    
    
</RelativeLayout>
