<?xml version="1.0" encoding="utf-8"?>
<!-- AUTHOR: X00084900 CHRISTOPHER NEWELL -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

 <TextView
      android:id="@+id/usernameText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginTop="50dp"
      android:text="@string/UserName"
      android:textAppearance="?android:attr/textAppearanceMedium"> 
 </TextView>

   <EditText
      android:id="@+id/usernameField"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_alignBottom="@+id/usernameText"
      android:layout_toRightOf="@+id/usernameText"
      android:ems="10"> 
    </EditText>
     
   <TextView
       android:id="@+id/passwordText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/usernameText"
       android:layout_marginTop="50dp"
       android:text="@string/PassWord"
       android:textAppearance="?android:attr/textAppearanceMedium">
   </TextView>
   
   <EditText
       android:id="@+id/passwordField"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="32dp"
       android:layout_alignBottom="@+id/passwordText"
       android:layout_toRightOf="@+id/passwordText"
       android:layout_marginTop="50dp"
       android:ems="10">
   </EditText>

     <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        style="@android:style/ButtonBar"
        >
        
        <Button
            android:id="@+id/loginButton_Confirm"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Log_In">
        </Button>
     </RelativeLayout>
    
    
</RelativeLayout>
